crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/struct_field/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

contract C {
    struct S {
        function (uint256) public f;
    }
}
